add publications/my/projects
