# api/docs/swagger.yaml
@@ -810,6 +810,47 @@ definitions:
         description: Общие поля
         type: string
     type: object
+  model.UserProfilePublicationItem:
+    properties:
+      id:
+        type: integer
+      imageUrl:
+        type: string
+      isAuthor:
+        type: boolean
+      likesCount:
+        type: integer
+      type:
+        $ref: '#/definitions/model.PublicationType'
+    type: object
+  model.UserProfileResponse:
+    properties:
+      outgoingRequestsCount:
+        type: integer
+      projectsCount:
+        type: integer
+      publications:
+        items:
+          $ref: '#/definitions/model.UserProfilePublicationItem'
+        type: array
+      teammatesCount:
+        type: integer
+      user:
+        $ref: '#/definitions/model.TarelkaUserFull'
+    type: object
+  model.UserPublicationShort:
+    properties:
+      id:
+        type: integer
+      imageUrl:
+        type: string
+      isAuthor:
+        type: boolean
+      likesCount:
+        type: integer
+      type:
+        $ref: '#/definitions/model.PublicationType'
+    type: object
   model.UserSearchItem:
     properties:
       city:
@@ -1596,6 +1637,32 @@ paths:
         ID публикации)
       tags:
       - publications
+  /publications/my/projects:
+    get:
+      description: Возвращает список публикаций типа PROJECT, где текущий пользователь
+        является автором.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.UserPublicationShort'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Список проектов текущего пользователя
+      tags:
+      - publications
   /publications/needs/search:
     get:
       description: Поиск потребностей по городу, названию, тегам публикации, тегам
@@ -2055,6 +2122,44 @@ paths:
       security:
       - BearerAuth: []
       summary: Установить внешнюю ссылку лого
+      tags:
+      - users
+  /users/{id}/profile:
+    get:
+      description: 'Расширенная информация о пользователе по ID: данные профиля, публикации
+        и агрегированные метрики.'
+      parameters:
+      - description: ID пользователя
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.UserProfileResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Профиль пользователя
       tags:
       - users
   /users/{id}/wallpaper/confirm:
